force-app/main/default/objects/AIAgentWorkflowAction__c/AIAgentWorkflowAction__c.object-meta.xml
<CustomObject>
    <description>Junction object assigning Workflow Actions to Agents, allowing one action to be reused across multiple agents and one agent to draw from multiple actions, each independently toggleable without needing to remove or edit the underlying Workflow Action or Agent record.</description>
    <label>AI Agent Workflow Action</label>
    <nameField>
        <displayFormat>AI Agent Action - {0000}</displayFormat>
        <label>AI Agent Workflow Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Agent Workflow Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>