force-app/main/default/objects/AIAgentWorkflowAction__c/fields/AIWorkflowAction__c.field-meta.xml
<CustomField>
    <fullName>AIWorkflowAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Workflow Action being assigned to this Agent.</description>
    <inlineHelpText>Select the action this Agent should be able to suggest to users.</inlineHelpText>
    <label>AI Workflow Action</label>
    <referenceTo>AIWorkflowAction__c</referenceTo>
    <relationshipLabel>AI Agent Workflow Actions</relationshipLabel>
    <relationshipName>AIAgentWorkflowActions</relationshipName>
    <type>Lookup</type>
</CustomField>