force-app/main/default/objects/AIAgentWorkflowAction__c/fields/PublicId__c.field-meta.xml
<CustomField>
    <fullName>PublicId__c</fullName>
    <description>A stable external identifier for this record, used by external systems or integrations to reference it without relying on the Salesforce record Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated when this record is created. Keep stable; changing it breaks external references.</inlineHelpText>
    <label>Public Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>